Fix fish visibility - remove conflicting animations, increase z-index and opacity

--- a/styles.css
+++ b/styles.css
@@ -242,43 +242,40 @@ input[type="checkbox"]{ width:18px; height:18px }
   width: 100vw;
   height: 100vh;
   pointer-events: none;
-  z-index: 1;
+  z-index: 5;
   overflow: hidden;
 }
 
 .fish {
   position: absolute;
-  font-size: 24px;
-  opacity: 0.9;
-  z-index: 1;
-  filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.4));
-  animation: fishSwim 15s linear infinite, fishWiggle 0.8s ease-in-out infinite;
+  font-size: 28px;
+  opacity: 1;
+  z-index: 5;
+  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.6));
 }
 
-.fish:nth-child(odd) {
-  animation-duration: 12s, 0.8s;
-  animation-delay: 0s, 0s;
-}
+/* Individual fish timing variations */
+.fish-left:nth-child(1) { animation-duration: 12s, 0.8s; animation-delay: 0s, 0s; }
+.fish-left:nth-child(2) { animation-duration: 18s, 0.8s; animation-delay: 2s, 0.2s; }
+.fish-left:nth-child(3) { animation-duration: 20s, 0.8s; animation-delay: 4s, 0.4s; }
+.fish-left:nth-child(4) { animation-duration: 14s, 0.8s; animation-delay: 6s, 0.6s; }
+.fish-left:nth-child(5) { animation-duration: 16s, 0.8s; animation-delay: 8s, 0.1s; }
+.fish-left:nth-child(6) { animation-duration: 15s, 0.8s; animation-delay: 10s, 0.3s; }
+.fish-left:nth-child(7) { animation-duration: 17s, 0.8s; animation-delay: 12s, 0.5s; }
+.fish-left:nth-child(8) { animation-duration: 13s, 0.8s; animation-delay: 14s, 0.7s; }
+.fish-left:nth-child(9) { animation-duration: 19s, 0.8s; animation-delay: 16s, 0.9s; }
+.fish-left:nth-child(10) { animation-duration: 21s, 0.8s; animation-delay: 18s, 0.1s; }
 
-.fish:nth-child(even) {
-  animation-duration: 18s, 0.8s;
-  animation-delay: 6s, 0.2s;
-}
-
-.fish:nth-child(3n) {
-  animation-duration: 20s, 0.8s;
-  animation-delay: 3s, 0.4s;
-}
-
-.fish:nth-child(4n) {
-  animation-duration: 14s, 0.8s;
-  animation-delay: 9s, 0.6s;
-}
-
-.fish:nth-child(5n) {
-  animation-duration: 16s, 0.8s;
-  animation-delay: 12s, 0.1s;
-}
+.fish-right:nth-child(11) { animation-duration: 11s, 0.8s; animation-delay: 1s, 0.2s; }
+.fish-right:nth-child(12) { animation-duration: 16s, 0.8s; animation-delay: 3s, 0.4s; }
+.fish-right:nth-child(13) { animation-duration: 18s, 0.8s; animation-delay: 5s, 0.6s; }
+.fish-right:nth-child(14) { animation-duration: 14s, 0.8s; animation-delay: 7s, 0.8s; }
+.fish-right:nth-child(15) { animation-duration: 20s, 0.8s; animation-delay: 9s, 0.1s; }
+.fish-right:nth-child(16) { animation-duration: 12s, 0.8s; animation-delay: 11s, 0.3s; }
+.fish-right:nth-child(17) { animation-duration: 15s, 0.8s; animation-delay: 13s, 0.5s; }
+.fish-right:nth-child(18) { animation-duration: 17s, 0.8s; animation-delay: 15s, 0.7s; }
+.fish-right:nth-child(19) { animation-duration: 13s, 0.8s; animation-delay: 17s, 0.9s; }
+.fish-right:nth-child(20) { animation-duration: 19s, 0.8s; animation-delay: 19s, 0.1s; }
 
 /* Fish swimming from left to right */
 .fish-left {
